# django-models

./: README.md  db.sqlite3  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog_project/: settings.py  urls.py
template/: base.html  create.html  delete.html  details.html  home.html  update.html
