[tool.poetry]
name = "django_models"
version = "0.1.0"
description = ""
authors = ["AbdullahMouzeen <abdullah.mouazeen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
Django = "^3.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
